[package]
name = "test_discord_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = "0.7.2"
bevy = "0.8.0"
bevy_turborand = "0.2.0"
clap = { version = "3.2.16", features = ["derive"] }
enum-map = "1.1.1"
futures = "0.3.17"
phf = { version = "0.10.1", features = ["macros"] }
rand = "0.8.4"
serde = { version = "1.0.132", features = ["derive"] }
serde_json = "1.0.73"
tokio = { version = "1.13.0", features = ["full"] }
twilight-util = { version = "0.12.1", features = ["builder"] }
twilight-gateway = "0.12.1"
twilight-http = "0.12.1"
twilight-model = "0.12.2"
