[package]
name = "test_discord_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = "0.7.2"
bevy = "0.8.0"
bevy_turborand = "=0.2.0"
chrono = "0.4.22"
clap = { version = "3.2.16", features = ["derive"] }
crossbeam-channel = "0.5.6"
derive-new = "0.5.9"
enum-map = "1.1.1"
futures = "0.3.17"
phf = { version = "0.10.1", features = ["macros"] }
rand = "0.8.4"
serde = { version = "1.0.132", features = ["derive"] }
serde_json = "1.0.73"
strum = { version = "0.24.1", features = ["derive"] }
thiserror = "1.0.34"
tokio = { version = "1.28.2", features = ["full"] }
tracing = "0.1.37"
twilight-util = { version = "0.15.2", features = ["builder"] }
twilight-gateway = "0.15.2"
twilight-http = "0.15.2"
twilight-model = "0.15.2"
